2025-03-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add call type, deprecate context, resolves #373

2025-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve delete reaction response when record is already deleted, resolves #372
    * Release version 8.0.4

2025-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Restore missing SQL definition for reactions table
    * Release version 8.0.3

    * Properly handle action class when adding a new Scheduler task in TYPO3 13, resolves #370
    * Correctly abort process when exception is thrown by step, resolves #371
    * Fix evaluation of global error status in Scheduler task
    * Release version 8.0.2

2025-03-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add rector rule for migrating "group" property
    * Release version 8.0.1

2025-03-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Avoid error in case of missing sorting field

2025-03-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Release version 8.0.0

2025-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add possibility to disable a configuration, resolves #365

2025-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Store user name rather than uid in log records, resolves #363
    * Restore visual cue for ordering, resolves #364
    * Suggest usage of coalesce operator in isEmpty property, resolves #357
    * Highlight relation between children property and IRRE-type fields, resolves #335
    * Consider relation-type fields with no minimum items to be nullable, resolves #337

2025-02-24 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow import reaction to target configuration group, resolves #367

2025-02-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Make it possible to put configuration into several groups, resolves #366

2025-01-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Migrate all tests to typo3/testing-framework, resolves #359
